Revert "Convert change listener to binding"
This reverts commit a39742f54896a84e44f00ca03f7feb1fe73ab527.